welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {

	avance();
	if (getCouleurSol()==Color.green)
	{
		avance();// Write your code here
	}
	else
	{
		recule();
		gauche();
		avance();
	}
}        
